Supports tmux 2.9 settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,9 +50,7 @@ set -g default-terminal "xterm-256color"
 set -g terminal-overrides "term:colors=256"
 
 # ステータスバーの色を設定する
-set -g status-fg default
-set -g status-bg default
-set -g status-attr reverse
+set -g status-style fg=default,bg=default,reverse
 
 # ウィンドウリストの色を設定する
 #setw -g window-status-fg default
@@ -61,7 +59,7 @@ set -g status-attr reverse
 # アクティブなウィンドウを目立たせる
 #setw -g window-status-current-fg default
 #setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
+setw -g window-status-current-style bright
 
 # ペインボーダーの色を設定する
 #set -g pane-border-fg white
