--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,9 +16,6 @@ setw -g pane-base-index 1
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# C-a*2でtmux内のプログラムにC-aを送る
-bind C-a send-prefix
-
 # | でペインを縦に分割する
 bind | split-window -h
 
@@ -34,6 +31,7 @@ bind k select-pane -U
 bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+bind C-o select-pane -t :.+
 
 # Vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
@@ -45,33 +43,15 @@ bind -r L resize-pane -R 5
 setw -g mouse
 
 # 256色端末を使用する
-#set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
-set -g terminal-overrides "term:colors=256"
+set -g terminal-overrides "xterm:colors=256"
 
-# ステータスバーの色を設定する
-set -g status-style fg=default,bg=default,reverse
-
-# ウィンドウリストの色を設定する
-#setw -g window-status-fg default
-#setw -g window-status-bg default
-#setw -g window-status-attr reverse
 # アクティブなウィンドウを目立たせる
-#setw -g window-status-current-fg default
-#setw -g window-status-current-bg default
-setw -g window-status-current-style bright
+setw -g window-status-current-style fg=terminal,bg=terminal
 
-# ペインボーダーの色を設定する
-#set -g pane-border-fg white
-#set -g pane-border-bg black
-# アクティブなペインを目立たせる
-#set -g pane-active-border-fg white
-#set -g pane-active-border-bg yellow
-
-# コマンドラインの色を設定する
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
+# 非アクティブウィンドウを白くする
+set -g window-active-style bg=terminal
+set -g window-style 'bg=colour239'
 
 # ステータスバーを設定する
 ## 左パネルを設定する
@@ -81,13 +61,9 @@ set -g status-left "【#S/#I/#P】"
 set -g status-right "%Y/%m/%d（%a）%H:%M"
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 60
-## ウィンドウリストの位置を中心寄せにする
-#set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
-## ステータスバーを上部に表示する
-#set -g status-position down
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
