--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,12 @@ setw -g window-status-current-style fg=terminal,bg=terminal
 set -g window-active-style bg=terminal
 set -g window-style 'bg=colour239'
 
+# ウィンドウを閉じた時に番号を詰める
+set-option -g renumber-windows on
+
+# ステータスバーを上部に表示
+set -g status-position top
+
 # ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 40
