--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,9 +46,10 @@ setw -g mouse
 set -g default-terminal "xterm-256color"
 set -g terminal-overrides "xterm:colors=256"
 
-# アクティブなウィンドウを目立たせる
+# アクティブなウィンドウのステータスラインを目立たせる
 setw -g window-status-current-style fg=terminal,bg=terminal
-
+# 処理を実行中のなウィンドウのステータスラインを目立たせる
+setw -g window-status-activity-style bg=colour229
 # 非アクティブウィンドウを白くする
 set -g window-active-style bg=terminal
 set -g window-style 'bg=colour239'
