Support 24bit color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,3 +83,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pb
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
+set -g default-terminal "xterm-24bits"
+set-option -ga terminal-overrides ",xterm-24bits:Tc"
