--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,9 +42,9 @@ bind -r L resize-pane -R 5
 # マウス操作を有効にする
 setw -g mouse
 
-# 256色端末を使用する
-set -g default-terminal "xterm-256color"
-set -g terminal-overrides "xterm:colors=256"
+# 24bit color端末を使用する
+set -g default-terminal "xterm-24bits"
+set-option -ga terminal-overrides ",xterm-24bits:Tc"
 
 # アクティブなウィンドウのステータスラインを目立たせる
 setw -g window-status-current-style fg=terminal,bg=terminal
@@ -82,6 +82,3 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-set -g default-terminal "xterm-24bits"
-set-option -ga terminal-overrides ",xterm-24bits:Tc"
