--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 .DS_Store
 *~
 .emacs.d/ddskk.d/*
+.emacs.d/amx-items
+.emacs.d/elpy/
+.emacs.d/projectile-bookmarks.eld
+.emacs.d/recentf
+.emacs.d/straight/
+.emacs.d/transient/
+.vim/dein/.cache/
+.vim/dein/cache_vim
+.vim/dein/repos/
+.vim/dein/state_vim.vim
 !.gitkeep
