--- a/ansible-playbook/roles/python/tasks/pyenv.yml
+++ b/ansible-playbook/roles/python/tasks/pyenv.yml
@@ -1,4 +1,7 @@
-- name: Stat pyenv
+- name: Include var
+  include_vars: pyenv.yml
+
+  - name: Stat pyenv
   stat:
     path: "{{ pyenv.install_dir }}"
   register: pyenv_dir
