--- a/ansible-playbook/roles/fzf/tasks/main.yml
+++ b/ansible-playbook/roles/fzf/tasks/main.yml
@@ -3,6 +3,7 @@
     repo: "{{ fzf.git_url }}"
     dest: "{{ fzf.install_dir }}"
     depth: 1
-
+  register: clone_fzf
 - name: Init fzf
   shell: ~/.fzf/install --completion --key-bindings  --no-update-rc --no-bash
+  when: clone_fzf.changed
