--- a/ansible-playbook/roles/term/tasks/main.yml
+++ b/ansible-playbook/roles/term/tasks/main.yml
@@ -1,8 +1,10 @@
 - name: Stat xterm-24bit
-  stat:
-    path: "~/.terminfo/78/xterm-24bit"
-  register: xterm_24bit_file
-
+  shell: bash -lc "ls -R ~/.terminfo | grep xterm-24bit"
+  register: xterm_24bit_file 
+  ignore_errors: yes
+  failed_when: xterm_24bit_file.rc not in [0, 1] 
+  changed_when: false
+ 
 - name: add xterm-24bit and xterm-24bits
-  shell: tic -x -o ~/.terminfo "{{ role_path }}/files/terminfo-24bit.src"
-  when: not xterm_24bit_file.stat.exists   
+  shell: tic -x -o ~/.terminfo {{ role_path }}/files/terminfo-24bit.src
+  when: xterm_24bit_file.rc == 1
