--- a/ansible-playbook/mac.yml
+++ b/ansible-playbook/mac.yml
@@ -1,13 +1,7 @@
+- import_playbook: common.yml
+
 - hosts: localhost
   connection: local
   roles:
-    - dotfiles
-    - xdg_config
-    - term
-    - fzf
-    - zsh
-    - python
-    - git
-    - emacs
-    - hyper
+    - homebrew
     - karabiner
