append ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 .DS_Store
 *~
-.emacs.d/ddskk.d/*
-.emacs.d/amx-items
-.emacs.d/elpy/
-.emacs.d/projectile-bookmarks.eld
-.emacs.d/recentf
-.emacs.d/straight/
-.emacs.d/transient/
+ansible-playbook/roles/emacs/files/.emacs.d/amx-items
+ansible-playbook/roles/emacs/files/.emacs.d/ddskk.d/*
+ansible-playbook/roles/emacs/files/.emacs.d/elpa/
+ansible-playbook/roles/emacs/files/.emacs.d/elpy/
+ansible-playbook/roles/emacs/files/.emacs.d/persp-confs/
+ansible-playbook/roles/emacs/files/.emacs.d/places
+ansible-playbook/roles/emacs/files/.emacs.d/prescient
+ansible-playbook/roles/emacs/files/.emacs.d/projectile-bookmarks.eld
+ansible-playbook/roles/emacs/files/.emacs.d/session.*
+ansible-playbook/roles/emacs/files/.emacs.d/transient/
+s
 .vim/dein/.cache/
 .vim/dein/cache_vim
 .vim/dein/repos/
