--- a/ansible-playbook/roles/tmux/files/.tmux.conf
+++ b/ansible-playbook/roles/tmux/files/.tmux.conf
@@ -46,13 +46,14 @@ setw -g mouse
 set -g default-terminal "xterm-24bits"
 set-option -ga terminal-overrides ",xterm-24bits:Tc"
 
+if-shell "[ -n '${SSH_CONNECTION}' ]" "set-option -g status-style bg=cyan,fg=black"
 # アクティブなウィンドウのステータスラインを目立たせる
 setw -g window-status-current-style fg=terminal,bg=terminal
 # 処理を実行中のなウィンドウのステータスラインを目立たせる
 setw -g window-status-activity-style bg=colour229
 # 非アクティブウィンドウを白くする
 set -g window-active-style bg=terminal
-set -g window-style 'bg=colour239'
+set -g window-style bg=colour239
 
 # ウィンドウを閉じた時に番号を詰める
 set-option -g renumber-windows on
