--- a/ansible-playbook/roles/tmux/files/.tmux.conf
+++ b/ansible-playbook/roles/tmux/files/.tmux.conf
@@ -4,40 +4,18 @@ set -g prefix C-q
 # C-bのキーバインドを解除する
 unbind C-b
 
-# キーストロークのディレイを減らす
-set -sg escape-time 1
-
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
 
 # ペインのインデックスを1から始める
 setw -g pane-base-index 1
 
-# 設定ファイルをリロードする
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# | でペインを縦に分割する
-bind | split-window -h
-
-# - でペインを横に分割する
-bind - split-window -v
-
 set -g history-limit 100000
 
 # Vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 bind C-o select-pane -t :.+
-
-# Vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
 setw -g mouse
@@ -67,19 +45,14 @@ set -g status-left-length 40
 set -g status-left "【#S/#I/#P】"
 ## 右パネルを設定する
 set -g status-right "%Y/%m/%d（%a）%H:%M"
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
 ## ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
 
-# コピーモードを設定する
-## viのキーバインドを使用する
-setw -g mode-keys vi
-## クリップボード共有を有効にする
-set-option -g default-command ""
-## コピーモードの操作をvi風に設定する
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+run '~/.tmux/plugins/tpm/tpm'
