--- a/ansible-playbook/roles/gnome/tasks/main.yml
+++ b/ansible-playbook/roles/gnome/tasks/main.yml
@@ -18,13 +18,13 @@
 - name: set maximize
   dconf:
     key: "/org/gnome/desktop/wm/keybindings/maximize"
-    value: "['<Alt>period']"
+    value: "['<Primary><Super>period']"
     state: present
 
 - name: set unmaximize
   dconf:
     key: "/org/gnome/desktop/wm/keybindings/unmaximize"
-    value: "['<Alt>comma']"
+    value: "['<Primary><Super>comma']"
     state: present
 
 - name: set switch-group
@@ -72,13 +72,13 @@
 - name: set toggle-tiled-left
   dconf:
     key: "/org/gnome/mutter/keybindings/toggle-tiled-left"
-    value: "['<Alt>h']"
+    value: "['<Primary><Super>h']"
     state: present
 
 - name: set toggle-tiled-right
   dconf:
     key: "/org/gnome/mutter/keybindings/toggle-tiled-right"
-    value: "['<Alt>l']"
+    value: "['<Primary><Super>l']"
     state: present
 
 - name: set toggle-application-view
