--- a/ansible-playbook/mac.yml
+++ b/ansible-playbook/mac.yml
@@ -1,9 +1,10 @@
-- import_playbook: common.yml
+- import_playbook: pre-common.yml
 
 - hosts: localhost
   connection: local
   roles:
     - homebrew
     - karabiner
-    - python
     - macos
+
+- import_playbook: post-common.yml
