--- a/ansible-playbook/ubuntu_cui.yml
+++ b/ansible-playbook/ubuntu_cui.yml
@@ -1,9 +1,9 @@
-- import_playbook: common.yml
+- import_playbook: pre-common.yml
 
 - hosts: localhost
   connection: local
   roles:
     - apt_common
     - apt_cui
-    - python
-    - rust
+
+- import_playbook: post-common.yml
