--- a/ansible-playbook/ubuntu_gui.yml
+++ b/ansible-playbook/ubuntu_gui.yml
@@ -1,4 +1,4 @@
-- import_playbook: common.yml
+- import_playbook: pre-common.yml
 
 - hosts: localhost
   connection: local
@@ -10,5 +10,5 @@
     - skk
     - gogh
     - xkeysnail
-    - python
-    - rust
+
+- import_playbook: post-common.yml
