--- a/ansible-playbook/roles/aquaskk/tasks/main.yml
+++ b/ansible-playbook/roles/aquaskk/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: Make config dir
   file:
-    path: ~/Library/ApplicationSupport/AquaSKK
+    path: "~/Library/Application Support/AquaSKK"
     state: directory
 
 - name: Link config
   file:
     src: "{{ role_path }}/files/keymap.conf"
-    dest: ~/Library/ApplicationSupport/AquaSKK/keymap.conf
+    dest: "~/Library/Application Support/AquaSKK/keymap.conf"
     state: link
