Enable xdg_config_home

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 .DS_Store
 *~
-ansible-playbook/roles/emacs/files/.emacs.d/amx-items
-ansible-playbook/roles/emacs/files/.emacs.d/ddskk.d/*
-ansible-playbook/roles/emacs/files/.emacs.d/elpa/
-ansible-playbook/roles/emacs/files/.emacs.d/elpy/
-ansible-playbook/roles/emacs/files/.emacs.d/persp-confs/
-ansible-playbook/roles/emacs/files/.emacs.d/places
-ansible-playbook/roles/emacs/files/.emacs.d/prescient
-ansible-playbook/roles/emacs/files/.emacs.d/projectile-bookmarks.eld
-ansible-playbook/roles/emacs/files/.emacs.d/recentf
-ansible-playbook/roles/emacs/files/.emacs.d/request/
-ansible-playbook/roles/emacs/files/.emacs.d/session.*
-ansible-playbook/roles/emacs/files/.emacs.d/snippets/
-ansible-playbook/roles/emacs/files/.emacs.d/transient/
-ansible-playbook/roles/emacs/files/.emacs.d/custom.el
-ansible-playbook/roles/emacs/files/.emacs.d/bookmarks
-ansible-playbook/roles/emacs/files/.emacs.d/history
-ansible-playbook/roles/emacs/files/.emacs.d/.cache/
+ansible-playbook/roles/emacs/files/emacs/amx-items
+ansible-playbook/roles/emacs/files/emacs/ddskk.d/*
+ansible-playbook/roles/emacs/files/emacs/elpa/
+ansible-playbook/roles/emacs/files/emacs/elpy/
+ansible-playbook/roles/emacs/files/emacs/persp-confs/
+ansible-playbook/roles/emacs/files/emacs/places
+ansible-playbook/roles/emacs/files/emacs/prescient
+ansible-playbook/roles/emacs/files/emacs/projectile-bookmarks.eld
+ansible-playbook/roles/emacs/files/emacs/recentf
+ansible-playbook/roles/emacs/files/emacs/request/
+ansible-playbook/roles/emacs/files/emacs/session.*
+ansible-playbook/roles/emacs/files/emacs/snippets/
+ansible-playbook/roles/emacs/files/emacs/transient/
+ansible-playbook/roles/emacs/files/emacs/custom.el
+ansible-playbook/roles/emacs/files/emacs/bookmarks
+ansible-playbook/roles/emacs/files/emacs/history
+ansible-playbook/roles/emacs/files/emacs/.cache/
 .vim/dein/.cache/
 .vim/dein/cache_vim
 .vim/dein/repos/
