--- a/ansible-playbook/roles/python/files/mypy/config/mypy.ini
+++ b/ansible-playbook/roles/python/files/mypy/config/mypy.ini
@@ -1,15 +1,14 @@
 [mypy]
+ignore_missing_imports = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
-disallow-untyped-calls = True
-disallow-any-expr = True
-disallow-any-decorated = True
-disallow-any-explicit = True
-disallow-any-generics = True
+disallow_untyped_calls = True
+disallow_any_expr = True
+disallow_any_decorated = True
+disallow_any_explicit = True
+disallow_any_generics = True
 check_untyped_defs = True
 warn_return_any = True
-warn-redundant-casts = True
+warn_unreachable = True
+warn_redundant_casts = True
 warn_unused_configs = True
-
-[mypy-requests.*]
-ignore_missing_imports = True
