--- a/ansible-playbook/roles/apt_common/tasks/main.yml
+++ b/ansible-playbook/roles/apt_common/tasks/main.yml
@@ -11,6 +11,12 @@
     name:
       - build-essential
 
+- name: zsh
+  become: yes 
+  apt:
+    name:
+      - zsh
+
 - name: tig
   become: yes 
   apt:
