--- a/ansible-playbook/roles/python/tasks/pipx.yml
+++ b/ansible-playbook/roles/python/tasks/pipx.yml
@@ -17,3 +17,7 @@
   failed_when: false
   changed_when: "'already' not in pipx_install.stdout"
   with_items: "{{ pipx.pipx_packages }}"
+
+- name: Install jupyterlab template extention
+  shell: ~/.local/bin/pipx inject jupyterlab jupyterlab_templates
+
