--- a/ansible-playbook/roles/zsh/vars/zinit.yml
+++ b/ansible-playbook/roles/zsh/vars/zinit.yml
@@ -1,3 +1,3 @@
 zinit:
-  git_url: https://github.com/zdharma/zinit.git
+  git_url: https://github.com/zdharma-continuum/zinit.git
   install_dir: ~/.zinit/bin
