--- a/ansible-playbook/roles/python/tasks/poetry.yml
+++ b/ansible-playbook/roles/python/tasks/poetry.yml
@@ -8,7 +8,7 @@
   changed_when: false
 
 - name: Install poetry
-  shell: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | ~/.pyenv/shims/python
+  shell: curl -sSL https://install.python-poetry.org | python3
   when: exist_poetry is failed
 
 - name: Update poetry
