--- a/ansible-playbook/roles/nvm/tasks/main.yml
+++ b/ansible-playbook/roles/nvm/tasks/main.yml
@@ -1,5 +1,8 @@
 - name: nvm
   shell: >
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
   args:
     creates: "~/.nvm/nvm.sh"
+
+- name: nodejs install
+  shell: nvm install --lts --latest-npm && nvm alias default 'lts/*'
