--- a/ansible-playbook/roles/nvm/tasks/main.yml
+++ b/ansible-playbook/roles/nvm/tasks/main.yml
@@ -2,7 +2,7 @@
   shell: >
     curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
   args:
-    creates: "~/.nvm/nvm.sh"
+    creates: "~/.config/nvm/nvm.sh"
 
 - name: nodejs install
-  shell: nvm install --lts --latest-npm && nvm alias default 'lts/*'
+  shell:  \. "${HOME}/.config/nvm/nvm.sh" && nvm install --lts --latest-npm && nvm alias default 'lts/*'
